# aivotlabs_assignment

./: .gitignore  README.md
prototype/: .env.example  README.md  bookings_log.json  call_log.txt  pyproject.toml
prototype/app/: config.py  main.py  prompts.py  routes.py
prototype/app/data/: slots.json
prototype/app/services/: __init__.py  booking.py  llm.py  session.py
prototype/app/static/: app.js  style.css
prototype/app/templates/: index.html
prototype/tests/: test_booking.py  test_llm.py
